--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ workflows:
   build_environments:
     jobs:
       - build_venv_environment
+      - build_conda_environment
   build_and_test:
     jobs:
       - build_and_test_PyDynamic
