Refine conda CI job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       - run:
           name: Install Miniconda
           command: |
-            wget "https://repo.anaconda.com/miniconda/
+            wget "https://repo.anaconda.com/miniconda/\
             Miniconda3-latest-Linux-x86_64.sh" -O miniconda.sh
             bash miniconda.sh -b -p miniconda
             conda init
