--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,9 @@ jobs:
           name: Install Miniconda
           command: |
             wget "https://repo.anaconda.com/miniconda/\
-            Miniconda3-latest-Linux-x86_64.sh" -O miniconda.sh
-            bash miniconda.sh -b -p miniconda
+            Miniconda3-latest-Linux-x86_64.sh" -O $HOME/miniconda.sh
+            bash $HOME/miniconda.sh -b -p $HOME/conda
+            export PATH=$HOME/conda/bin:$PATH
             conda init
             conda create -f environment.yml
 
