--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,9 @@ jobs:
             Miniconda3-latest-Linux-x86_64.sh" -O $HOME/miniconda.sh
             bash $HOME/miniconda.sh -b -p $HOME/conda
             export PATH=$HOME/conda/bin:$PATH
-            conda init
-            conda create -f environment.yml
+
+#            conda init
+#            conda create -f environment.yml
 
 #      # Install dependencies.
 #      - run:
