--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             bash $HOME/miniconda.sh -b -p $HOME/conda
             export PATH=$HOME/conda/bin:$PATH
             conda init
-            less $HOME/.bashrc
+            cat $HOME/.bashrc
 
       # Install dependencies.
       - run:
