--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,12 @@ version: 2.1
 workflows:
   build_environments:
     jobs:
-      - build_venv_environment
+#      - build_venv_environment
       - build_conda_environment
   build_and_test:
     jobs:
-      - build_and_test_PyDynamic
-      - build_and_test_agentMET4FOF
+#      - build_and_test_PyDynamic
+#      - build_and_test_agentMET4FOF
 
 jobs:
   build_conda_environment:
@@ -52,9 +52,7 @@ jobs:
             Miniconda3-latest-Linux-x86_64.sh" -O $HOME/miniconda.sh
             mkdir -p $HOME/.conda
             bash $HOME/miniconda.sh -b -p $HOME/conda
-            export PATH=$HOME/conda/bin:$PATH
-            conda init
-            cat $HOME/.bashrc
+            echo 'export PATH=$HOME/conda/bin:$PATH' >> $BASH_ENV
 
       # Install dependencies.
       - run:
