--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ workflows:
     jobs:
 #      - build_venv_environment
       - build_conda_environment
-  build_and_test:
-    jobs:
+#  build_and_test:
+#    jobs:
 #      - build_and_test_PyDynamic
 #      - build_and_test_agentMET4FOF
 
