--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,10 @@ jobs:
           name: Install Miniconda
           command: |
             wget "https://repo.anaconda.com/miniconda/\
-            Miniconda3-latest-Linux-x86_64.sh" -O $HOME/miniconda.sh
-            mkdir -p $HOME/.conda
-            bash $HOME/miniconda.sh -b -p $HOME/conda
-            echo 'export PATH=$HOME/conda/bin:$PATH' >> $BASH_ENV
+            Miniconda3-latest-Linux-x86_64.sh" -O /home/circleci/miniconda.sh
+            mkdir -p /home/circleci/.conda
+            bash /home/circleci/miniconda.sh -b -p /home/circleci/conda
+            echo 'export PATH=/home/circleci/conda/bin:$PATH' >> $BASH_ENV
 
       # Download and cache dependencies
       - restore_cache:
@@ -58,7 +58,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            if [ -d "$HOME/conda/envs/" ]; then
+            if [ -d "/home/circleci/conda/envs/" ]; then
                 conda env update --prune --file environment.yml
             else
                 conda update -q conda
@@ -69,7 +69,7 @@ jobs:
 
       - save_cache:
           paths:
-            - $HOME/conda/envs
+            - /home/circleci/conda/envs
           key: >-
             conda-dependencies-{{ checksum "environment.yml" }}
 
