--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
       # for use in downstream job.
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory.
-          root: .
+          root: /home/circleci
           # Must be relative path from root
           paths:
             - miniconda3
