--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,10 +80,10 @@ jobs:
       # for use in downstream job.
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory.
-          root: /home/circleci/conda
+          root: /home/circleci/
           # Must be relative path from root
           paths:
-            - .
+            - conda
 
 #      # Run tests! We use pytest's test-runner.
 #      - run:
